--- a/assets/scss/components/_cp-header-socials.scss
+++ b/assets/scss/components/_cp-header-socials.scss
@@ -12,7 +12,18 @@
 		// line-height: 32px;
 		@extend %bgc-white;
 		@extend %color-dark;
+		margin-top: 5px;
+		margin-bottom: 5px;
+		@include respond-to(small-mobile) {
+			margin-right: 0;
+			margin-left: 7px;
+			width:28px;
+			height:28px;
+			line-height: 28px;
+		}
 	}
+
+
 
 	&:hover {
 		a {
